# seodada-seo

./: .env.example  .env.production.example  .gitignore  Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.claude/: CLAUDE.md  (+1 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 621cc6d9fff0_initial_schema.py  6d95e7b906a4_add_schedules.py  8f3c2a91d4e7_add_rank_snapshot_device.py  9c1f7ae40b23_add_locations.py  a1b2c3d4e5f6_add_user_is_verified.py  a9b0c1d2e3f4_add_contact_and_email_logs.py  b0c1d2e3f4a5_add_admin_rbac.py  b2c3d4e5f6a7_add_blog_tables.py  b2c3d4e5f6a8_cost_cents_fractional.py  c3d4e5f6a7b8_add_billing_tables.py  c3d4e5f6a7b9_add_user_display_currency.py  c4d5e6f7a8b9_add_blog_authoring_fields.py  d4e5f6a7b8c1_site_display_currency.py  d5e6f7a8b9c0_drop_blog_tables.py  d8e9f0a1b2c3_add_refresh_tokens.py  e6f7a8b9c0d1_add_website_settings.py  e9f0a1b2c3d4_add_user_unlimited_usage.py  f0a1b2c3d4e5_add_web_story_categories.py  f7a8b9c0d1e2_add_content_tables.py
backend/app/: main.py  scheduler_main.py
backend/app/api/: deps.py  limiter.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: admin.py  ai.py  ai_visibility.py  audit.py  auth.py  backlinks.py  billing.py  common.py  content.py  domains.py  keywords.py  local.py  locations.py  onpage.py  projects.py  rank.py  report.py  schedule.py  serp.py
backend/app/services/: ai.py  ai_visibility.py  billing.py  brand.py  cache_backend.py  coalescer.py  competitive.py  crawler.py  density.py  dfs_account.py  email.py  engine.py  fx.py  invoices.py  normalize.py  page_analysis.py  pagination.py  pixels.py  providers.py  rank_watch.py  ranking.py  report.py  scheduler.py  scoring.py  sentiment.py  usage.py
backend/scripts/: build_openapi.py  create_user.py  extract_content.py  import_seodada_content.py  seed_locations.py
backend/tests/: conftest.py  test_admin.py  test_admin_extended.py  test_admin_manage.py  test_ai.py  test_ai_visibility.py  test_auth_rules.py  test_backlinks_audit.py  test_billing.py  test_blocking.py  test_bulk_overview.py  test_client.py  test_coalescer.py  test_competitive_cache.py  test_cost_precision.py  test_dfs_expansion.py  test_domain_ai_keywords.py  test_email.py  test_engine.py  test_errors.py  test_free_providers.py  test_google_oauth.py  test_locations.py  test_meta_schema.py  test_onpage_audit.py  test_openpagerank.py  test_pagination.py  test_password_reset.py  test_projects.py  test_quota.py  test_rank.py  test_rank_untrack.py  test_rank_watch.py  test_ratelimit.py  test_refresh_tokens.py  test_report.py  test_scheduler.py  test_scoring.py  test_serp_engines.py  test_serp_parse.py  (+6 more)
(+344 files in other folders)
