[project]
name = "dataforseo-app"
version = "0.1.0"
description = "Multi-tenant SEO intelligence platform powered by DataForSEO"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx[http2]>=0.27",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "orjson>=3.10",
    "structlog>=24.4",
    "tenacity>=9.0",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
    "vadersentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
