[project]
name = "dataforseo-app"
version = "0.1.0"
description = "Multi-tenant SEO intelligence platform powered by DataForSEO"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx[http2]>=0.27",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "orjson>=3.10",
    "structlog>=24.4",
    "tenacity>=9.0",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
    "vadersentiment>=3.3.2",
    # Advanced Site-Audit scraper (App B port): TLS-spoofing async fetch,
    # fast HTML parsing, URL canonical/dedup, boilerplate-stripped text.
    # Playwright JS rendering is opt-in (scraper_render_js) and additionally
    # needs `playwright install chromium`.
    "curl_cffi>=0.7",
    "selectolax>=0.3.21",
    "rbloom>=1.5",
    "w3lib>=2.1",
    "trafilatura>=1.12",
    "prometheus-client>=0.21",
    "playwright>=1.47",
    # Billing: GST tax-invoice PDF generation.
    "reportlab>=4.0",
    "num2words>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
